--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
     "@emotion/style": "^0.8.0",
-    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.15",
+    "@mui/system": "^5.15.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "express": "^4.19.1",
     "localforage": "^1.10.0",
@@ -18,6 +18,7 @@
     "mongoose": "^8.2.3",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
